# trackman

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  Trackman.jucer  guidelines.md  roadmap.md
Builds/VisualStudio2022/: Trackman.sln  Trackman_App.vcxproj  Trackman_App.vcxproj.filters  resources.rc
JuceLibraryCode/: JuceHeader.h
Source/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  ChildWindow.cpp  ChildWindow.h  DecibelSlider.h  DesktopComponent.cpp  DesktopComponent.h  FileChooserControl.cpp  FileChooserControl.h  FileListener.cpp  FileListener.h  JuceHeader.h  Main.cpp  MainComponent.cpp  MainComponent.h  MasterChannelControl.cpp  MasterChannelControl.h  MasterTrackControl.cpp  MasterTrackControl.h  MixerComponent.cpp  MixerComponent.h  PositionableMixingAudioSource.cpp  PositionableMixingAudioSource.h  PositionableResamplingAudioSource.cpp  PositionableResamplingAudioSource.h  ProcessingAudioSource.cpp  ProcessingAudioSource.h  ThumbnailComponent.cpp  ThumbnailComponent.h  Track.cpp  Track.h  TrackControl.cpp  TrackControl.h  TrackLaneControl.cpp  TrackLaneControl.h  TransportControl.cpp  TransportControl.h  listutil.h
Source/audio/: ProcessingAudioSource.h
Source/controls/common/: DecibelSlider.h  TransportControl.h
Source/controls/mixer/: MasterTrackControl.cpp  MasterTrackControl.h  TrackControl.h  TrackLaneControl.h
Source/model/: Track.cpp
src/: CMakeLists.txt  Main.cpp
src/audio/: GainAudioSource.cpp  GainAudioSource.h  MeteredAudioSource.cpp  MeteredAudioSource.h  MidiListener.h  MidiRecorder.cpp  MidiRecorder.h  MixerAudioSource.h  OffsetAudioSource.cpp  OffsetAudioSource.h  PositionableAudioSourceAdapter.h  PositionableMixingAudioSource.cpp  PositionableMixingAudioSource.h  PositionableResamplingAudioSource.cpp  PositionableResamplingAudioSource.h  ProcessingAudioSource.cpp  ProcessingAudioSource.h  SamplePlayer.cpp  SamplePlayer.h  SynthAudioSource.cpp  SynthAudioSource.h  TimeRange.cpp  TimeRange.h  Timeline.cpp  Timeline.h
src/commands/: Command.h  CommandList.cpp  CommandList.h  MixerCommands.h  NoteRollCommands.h  SampleCommands.h  TrackCommands.cpp  TrackCommands.h  TrackListCommands.h  TransportCommands.h
src/common/: base64.h  listutil.h  mathutil.h  midiutil.h  timeutil.h
src/controls/: AudioPlayer.cpp  AudioPlayer.h  MainAudioComponent.cpp  MainAudioComponent.h  MainWindow.cpp  MainWindow.h
src/controls/common/: DecibelSlider.h  FileChooserControl.cpp  FileChooserControl.h  PositionOverlay.cpp  PositionOverlay.h  ThumbnailComponent.cpp  ThumbnailComponent.h  TimeMeter.cpp  TimeMeter.h  TransportControl.cpp  TransportControl.h
src/controls/desktop/: ChildWindow.h  DesktopComponent.cpp  DesktopComponent.h  DesktopController.cpp  DesktopController.h  FileDragDropTarget.h  ScaleButtonPanel.cpp  ScaleButtonPanel.h  TrackController.cpp  TrackController.h  TrackControllerListener.h  TrackListController.cpp  TrackListController.h  TrackListListener.h  TrackScaleListener.h  TrackSourceListener.h
src/controls/mixer/: LevelMeterLookAndFeel.h  MasterLevelMeterLookAndFeel.cpp  MasterLevelMeterLookAndFeel.h  MasterTrackControl.cpp  MasterTrackControl.h  MasterTrackListener.h  MixerComponent.cpp  MixerComponent.h  MixerController.cpp  MixerController.h  MixerPanel.cpp  MixerPanel.h  MixerPanelListener.h  TrackControl.cpp  TrackControl.h  TrackControlListener.h  TrackController.cpp  TrackController.h  TrackPanel.cpp
src/controls/tracks/: SampleListener.h  SampleThumbnail.cpp  SampleThumbnail.h  TrackLaneControl.cpp  TrackLaneControl.h  TrackLaneController.cpp  TrackLaneController.h  TrackListController.cpp  TrackListController.h  TrackListPanel.cpp  TrackListPanel.h  TrackListViewport.cpp  TrackListViewport.h
src/model/: Instrument.cpp  Instrument.h  InstrumentPlayer.cpp  InstrumentPlayer.h  MidiHandler.cpp  MidiHandler.h  MidiPlayer.cpp  MidiPlayer.h  MidiRecorder.cpp  MidiRecorder.h  Mixer.cpp  Mixer.h  NoteRoll.cpp  NoteRoll.h  Position.cpp  Position.h  Project.cpp  Project.h  Sample.cpp  Sample.h  SamplePlayer.cpp  SamplePlayer.h  TimeRange.h  TimeSignature.cpp  TimeSignature.h  Timeline.h  Track.cpp  Track.h  TrackList.cpp  TrackList.h  TrackRegion.cpp  TrackRegion.h  Transport.cpp  Transport.h
src/ui/: AudioPlayer.cpp  AudioPlayer.h  KeyboardControl.cpp  KeyboardControl.h  MainAudioComponent.cpp  MainAudioComponent.h  MainWindow.cpp  MainWindow.h
src/ui/common/: DecibelSlider.h  FileChooserControl.cpp  FileChooserControl.h  NoteCanvas.cpp  NoteCanvas.h  PositionOverlay.cpp  PositionOverlay.h  ThumbnailComponent.cpp  ThumbnailComponent.h  TimeMeter.cpp  TimeMeter.h  TransportControl.cpp  TransportControl.h
src/ui/desktop/: ChildWindow.cpp  ChildWindow.h  DesktopComponent.cpp  DesktopComponent.h  DesktopController.cpp  DesktopController.h  FileDragDropTarget.h  ScaleButtonPanel.cpp  ScaleButtonPanel.h  TimeMeter.cpp  TimeMeter.h  TrackListListener.h  TrackScaleListener.h
src/ui/instruments/: InstrumentControl.cpp  InstrumentControl.h  InstrumentController.cpp  InstrumentController.h  InstrumentsController.cpp  InstrumentsController.h  InstrumentsPanel.cpp  InstrumentsPanel.h
src/ui/mixer/: LevelMeterLookAndFeel.h  MasterLevelMeterLookAndFeel.h  MasterTrackControl.cpp  MasterTrackControl.h  MasterTrackListener.h  MixerController.cpp  MixerController.h  MixerPanel.cpp  MixerPanel.h  TrackControl.cpp  TrackControl.h  TrackControlListener.h  TrackController.cpp  TrackController.h  TrackPanel.cpp  TrackPanel.h
src/ui/tracks/: NoteCanvas.cpp  NoteCanvas.h  NoteRoll.cpp  NoteRoll.h  SampleListener.h  SampleThumbnail.cpp  SampleThumbnail.h  TrackLaneControl.cpp  TrackLaneControl.h  TrackLaneController.cpp  TrackLaneController.h  TrackListController.cpp  TrackListController.h  TrackListPanel.cpp  TrackListPanel.h  TrackListViewport.cpp  TrackListViewport.h
src/ui/transport/: TransportController.cpp  TransportController.h  TransportPanel.cpp  TransportPanel.h
